tests/ui/parser/mbe_missing_right_paren.rs
// ignore-tidy-trailing-newlines
// error-pattern: this file contains an unclosed delimiter
macro_rules! abc(ؼ